// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A suite should render a description without throwing an error 1`] = `
<div
  className="a5mel5-0 cdCiKx"
>
  <p>
    The Apollotech B340 is an affordable wireless mouse with reliable connectivity, 12 months battery life and modern design
  </p>
</div>
`;

exports[`A suite should render a name without throwing an error 1`] = `
<div>
  <div
    className="sdphye-0 ghDmRY"
  >
    <div>
      REI Co-op
    </div>
  </div>
  <div
    className="sdphye-1 jAjLYf"
  >
    <span>
       REI Co-op  
    </span>
    <span>
      Ergonomic Rubber Hat
    </span>
  </div>
</div>
`;

exports[`A suite should render a price without throwing an error 1`] = `
<div
  className="sc-5tcji-0 gNWCqj"
>
  <span>
    $186.48
  </span>
  <div
    className="sc-5tcji-1 gZZJKx"
  >
    <p>
      Orders of $50 or more ship for free.
    </p>
  </div>
</div>
`;

exports[`A suite should render a quantity box without throwing an error 1`] = `
<div>
  <div
    className="b4lb5i-3 hfWKjb"
  >
    Quantity
  </div>
  <button
    className="b4lb5i-0 fpcTTc"
    data-ui="quantity-decrement"
  />
  <input
    className="b4lb5i-2 ijUctX"
    data-ui="product-buygrid-quantity-box"
    max="9999"
    min="1"
    type="number"
  />
  <button
    className="b4lb5i-1 hWdolp"
    data-ui="quantity-increment"
  />
  <hr />
</div>
`;

exports[`A suite should render a quantity box without throwing an error 2`] = `
<div>
  <div
    className="dehvk0-0 iqomMV"
  >
    <img
      className="dehvk0-2 fsqUKm"
    />
    <p
      className="dehvk0-1 hVyiMz"
    >
      Curbside Pickup available at select locations.
    </p>
    <span
      className="dehvk0-3 jzgGcO"
    >
      Learn more
    </span>
  </div>
  <div>
    <input
      className="dehvk0-4 fSnuWg"
      name="ship"
      type="radio"
    />
    <label
      className="dehvk0-5 jKAiXo"
    >
      Ship to address
    </label>
  </div>
  <div>
    <input
      className="dehvk0-4 fSnuWg"
      name="ship"
      type="radio"
    />
    <label
      className="dehvk0-5 jKAiXo"
    >
      Pick up at store
    </label>
  </div>
  <span
    className="dehvk0-7 eKFhDS"
  >
    Find a store near you
  </span>
  <button
    className="dehvk0-6 dTZmUs"
  >
    Add to cart $186.48
  </button>
  <div>
    <button
      className="dehvk0-8 jHCeBt"
    >
      Add to wish list
    </button>
    <button
      className="dehvk0-9 kmteHH"
    >
      Add to registry
    </button>
  </div>
  <div>
    <div
      className="dehvk0-10 lgcpRq"
    >
      REI return policy
    </div>
  </div>
</div>
`;

exports[`A suite should render a rating and number of ratings without throwing an error 1`] = `
<div>
  <div
    className="sc-179h418-1 iTihlm"
  />
  <span>
    4 | 292
  </span>
  <span
    className="sc-179h418-0 hPXnqg"
  >
    Item  #1
  </span>
</div>
`;

exports[`A suite should render an image without throwing an error 1`] = `
<img
  className="nuhrh2-0 bpmCqm"
/>
`;

exports[`A suite should render color and price without throwing an error 1`] = `
<div
  className="sgaphz-0 cFlZuE"
>
  <div>
    Color : maroon
  </div>
  <div
    className="sgaphz-1 ckHUWv"
  >
    <div>
      $186.48
    </div>
  </div>
  <div
    className="sgaphz-2 fvaWoO"
  />
</div>
`;

exports[`A suite should render size options without throwing an error 1`] = `
<div>
  <div
    className="k7f4n0-0 eXNPCd"
  >
    Size
  </div>
  <span
    className="k7f4n0-1 jQSePz"
  >
    Small
  </span>
  <span
    className="k7f4n0-1 jQSePz"
  >
    Medium
  </span>
  <div
    className="k7f4n0-2 eoQAub"
  >
    <span
      className="k7f4n0-1 jQSePz"
    >
      Large
    </span>
    <span
      className="k7f4n0-1 jQSePz"
    >
      X-Large
    </span>
  </div>
</div>
`;
